fixes for root mode